--- a/src/app/dco/dco.component.scss
+++ b/src/app/dco/dco.component.scss
@@ -486,7 +486,14 @@ Frames
   text-align: -webkit-center;
   cursor: pointer;
 }
-
+button.btn.btn-default.navbar-btn {
+  text-align: right;
+  position: absolute;
+  right: 0;
+  font-weight: bold;
+  color: #1b3664;
+  margin-right: 20px;
+}
 .frame-cta {
   margin: 10px;
   background: #1b3664;
@@ -496,6 +503,15 @@ Frames
   vertical-align: -webkit-baseline-middle;
   padding-top: 5px;
   cursor: pointer;
+}
+.btn-download{
+  background: #1b3664;
+}
+
+:host ::ng-deep angular2csv button {
+  border: none !important;
+  background: transparent;
+  color: white;
 }
 
 .frame-dealer-logo:before, .frame-heading-text:before, .frame-vehicle-img:before, .frame-subheading1-text:before, .frame-subheading2-text:before, .frame-background:before {
